# optimal-control

./: CMakeLists.txt  README.md
scripts/: build.bash
src/simulator/: CMakeLists.txt  simulator.py
src/simulator/backend/: CMakeLists.txt
src/simulator/backend/src/communication_layer/: CMakeLists.txt  communication_manager.cpp  websocket_manager.cpp
src/simulator/frontend/: package-lock.json  package.json
src/simulator/frontend/src/: App.jsx
src/simulator/frontend/src/components/: Box.js  Floor.js  Rocket.js  Scene.js  Scene.module.css
src/simulator/frontend/src/pages/: index.js
src/simulator/frontend_bak/: package-lock.json  package.json
src/simulator/frontend_bak/.next/cache/webpack/server-development/: 0.pack  index.pack
src/simulator/frontend_bak/src/pages/: index.js
src/simulator/frontend_bak/src/pages/api/: socket.js
